--- a/PXEngine/PXEngine.vcxproj.filters
+++ b/PXEngine/PXEngine.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\PxeVertexArray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\nonpublic\NpShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\PxeEngine.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\nonpublic\NpLogger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\nonpublic\NpShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
