--- a/PXEngine/PXEngine.vcxproj
+++ b/PXEngine/PXEngine.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="src\PxeEngineBase.cpp" />
     <ClCompile Include="src\PxeFSHelpers.cpp" />
     <ClCompile Include="src\PxeIndexBuffer.cpp" />
+    <ClCompile Include="src\PxeRenderMaterial.cpp" />
     <ClCompile Include="src\PxeVertexArray.cpp" />
     <ClCompile Include="src\PxeVertexBuffer.cpp" />
     <ClCompile Include="src\PxeLogger.cpp" />
@@ -198,6 +199,7 @@
     <ClInclude Include="include\PxeIndexBuffer.h" />
     <ClInclude Include="include\PxeRenderBase.h" />
     <ClInclude Include="include\PxeRenderElement.h" />
+    <ClInclude Include="include\PxeRenderMaterial.h" />
     <ClInclude Include="include\PxeRenderObject.h" />
     <ClInclude Include="include\PxeVertexArray.h" />
     <ClInclude Include="include\PxeVertexBuffer.h" />
