--- a/PXEngineSamples/PXEngineSamples.vcxproj
+++ b/PXEngineSamples/PXEngineSamples.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="src\LogHandler.h" />
     <ClInclude Include="src\TestAsset.h" />
     <ClInclude Include="src\TestRenderObject.h" />
+    <ClInclude Include="src\TestTextureRenderObject.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
