--- a/PXEngineSamples/PXEngineSamples.vcxproj.filters
+++ b/PXEngineSamples/PXEngineSamples.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="src\TestRenderObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\TestTextureRenderObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
